typo in theorem 6.10

--- a/algebrske-strukture.tex
+++ b/algebrske-strukture.tex
@@ -755,7 +755,7 @@
 			\item $S \subseteq R$
 			\item $0 \in S$
 			\item $\forall a,b \in S: a-b \in S$
-			\item $\forall a,b \in S: a-b \in S$
+			\item $\forall a,b \in S: a \cdot b \in S$
 		\end{itemize}
 	\end{theorem}
 	\begin{proof}
