added reference to definition in 4.1

--- a/algebrske-strukture.tex
+++ b/algebrske-strukture.tex
@@ -264,7 +264,7 @@
 		Dokaz je tako zelo enostaven, da ga ne bomo "sli dokazovat. Glavna ideja je, da malo gledate ta zaporedja in potem dobite neke zaklju"cke. %ok boomer
 	\end{proof}
 	
-	\begin{defn}[Cikli"cna podgrupa]
+	\begin{defn}[Cikli"cna podgrupa]\label{ciklicna_podgrupa}
 		Naj bo $(G. \cdot)$ grupa in $a \in G$. Potem naj bo
 		\[ \langle a \rangle := \lbrace a^n: n \in \Z \rbrace \]
 		Podgrupa $(\langle a \rangle, \cdot)$ je cikli"cna podgrupa v $G$, generirana z enoto $a$.
@@ -315,6 +315,8 @@
 	\begin{defn}[Cikli"cna grupa]
 		Naj bo $(G. \cdot)$ grupa in $a \in G$. "Ce velja 
 		\[ \langle a \rangle = G \]
+		kjer je $ \langle a \rangle $ definiran kot v \ref{ciklicna_podgrupa}:
+		\[ \langle a \rangle := \lbrace a^n: n \in \Z \rbrace \]
 		potem je $G$ cikli"cna grupa, $a$ pa njen generator.
 	\end{defn}
 	
