typo in theorem 6.21

--- a/algebrske-strukture.tex
+++ b/algebrske-strukture.tex
@@ -856,7 +856,7 @@
 		\begin{itemize}
 			\item $\Z_n$ je cel kolobar
 			\item $\Z_n$ je polje
-			\item $\Z_n$ je pra"stevilo
+			\item $n$ je pra"stevilo
 		\end{itemize}
 	\end{theorem}
 	\begin{proof}
