cilicna grupa ni generirana z enoto

--- a/algebrske-strukture.tex
+++ b/algebrske-strukture.tex
@@ -267,7 +267,7 @@
 	\begin{defn}[Cikli"cna podgrupa]\label{ciklicna_podgrupa}
 		Naj bo $(G. \cdot)$ grupa in $a \in G$. Potem naj bo
 		\[ \langle a \rangle := \lbrace a^n: n \in \Z \rbrace \]
-		Podgrupa $(\langle a \rangle, \cdot)$ je cikli"cna podgrupa v $G$, generirana z enoto $a$.
+		Podgrupa $(\langle a \rangle, \cdot)$ je cikli"cna podgrupa v $G$, generirana z elementom $a$.
 	\end{defn}
 	\begin{claim}
 		"Ce je $(G, \cdot)$ grupa in $a \in G$, potem je
