inverz je enolicen samo z asociativnostjo

--- a/algebrske-strukture.tex
+++ b/algebrske-strukture.tex
@@ -88,10 +88,10 @@
 		Inverz abstraktnega mno"zenja ozna"cujemo z $a^{-1}$, inverz abstraktnega se"stevanja pa z $-a$.
 	\end{rem}
 	\begin{theorem}
-		Inverz je enoli"cen.
+		Inverz je enoli"cen, "ce imamo asociativnost.
 	\end{theorem}
 	\begin{proof}
-		Predpostavimo, da obstajata dva inverza $b_1$ in $b_2$.
+		Predpostavimo asociativnost in obstoj dveh inverzov $b_1$ in $b_2$.
 		\[ b_1 = b_1 \cdot e = b_1 \cdot (a \cdot b_2) = (b_1 \cdot a) \cdot b_2 = e \cdot b_2 = b_2 \]
 	\end{proof}
 
